not working, need to figure out how to upgrade to glibc version >=2.26

--- a/deploy/addons/gvisor/Dockerfile
+++ b/deploy/addons/gvisor/Dockerfile
@@ -5,6 +5,12 @@ RUN go build -o /gvisor cmd/gvisor/gvisor.go
 
 
 FROM gcr.io/google-appengine/debian9:latest
-RUN apt-get update && apt-get install -y wget systemd
+RUN apt-get update && apt-get install -y wget systemd curl build-essential gawk
+RUN apt-get install sudo
+# WORKDIR /src/gnu/
+# RUN curl -LO http://ftp.gnu.org/gnu/glibc/glibc-2.26.tar.gz && \
+#     tar -xzf glibc-2.26.tar.gz
+# WORKDIR /src/gnu/glibc-build
+# RUN ../glibc-2.26/configure --disable-sanity-checks
 COPY --from=0 /gvisor /gvisor
 CMD /gvisor
