--- a/deploy/addons/gvisor/gvisor-installer.yaml
+++ b/deploy/addons/gvisor/gvisor-installer.yaml
@@ -28,6 +28,24 @@ spec:
       volumeMounts:
       - mountPath: /node/
         name: node
+      - mountPath: /usr/libexec/sudo
+        name: sudo
+      - mountPath: /etc
+        name: etc
+      - mountPath: /usr/lib
+        name: usrlib
+      - mountPath: /usr/share
+        name: usrshare
+      - mountPath: /tmp
+        name: tmp
+      # - mountPath: /run/systemd
+        # name: run
+      - mountPath: /sys
+        name: sys
+      - mountPath: /mnt
+        name: mnt
+      - mountPath: /var/lib
+        name: varlib
       env:
         - name: PATH
           value: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/node/bin
@@ -36,5 +54,41 @@ spec:
     hostPath:
       # directory location on host
       path: /
+  - name: sudo
+    hostPath:
+      # directory location on host
+      path: /usr/libexec/sudo
+  - name: etc
+    hostPath:
+      # directory location on host
+      path: /etc
+  - name: usrlib
+    hostPath:
+      # directory location on host
+      path: /usr/lib
+  - name: usrshare
+    hostPath:
+      # directory location on host
+      path: /usr/share
+  - name: tmp
+    hostPath:
+      # directory location on host
+      path: /tmp
+  - name: run
+    hostPath:
+      # directory location on host
+      path: /run/systemd
+  - name: sys
+    hostPath:
+      # directory location on host
+      path: /sys
+  - name: mnt
+    hostPath:
+      # directory location on host
+      path: /mnt
+  - name: varlib
+    hostPath:
+      # directory location on host
+      path: /var/lib
   restartPolicy: Never
 
