--- a/deploy/addons/gvisor/Dockerfile
+++ b/deploy/addons/gvisor/Dockerfile
@@ -6,9 +6,7 @@
 
 FROM ubuntu:18.04
 RUN apt-get update && \
-    apt-get install -y kmod gcc wget xz-utils libc6-dev bc libelf-dev bison flex openssl libssl-dev && \
+    apt-get install -y kmod gcc wget xz-utils libc6-dev bc libelf-dev bison flex openssl libssl-dev libidn2-0 sudo libcap2 && \
     rm -rf /var/lib/apt/lists/*
-RUN apt-get update && apt-get -y install libidn2-0
-# RUN apt-get update && apt-get install -y curl
 COPY out/gvisor /gvisor
 CMD /gvisor
