--- a/deploy/addons/gvisor/gvisor-containerd-shim.toml
+++ b/deploy/addons/gvisor/gvisor-containerd-shim.toml
@@ -2,4 +2,4 @@ runc_shim = "/bin/containerd-shim"
 [runsc_config]
  debug-log="/tmp/runsc/"
  debug="true"
- log="/tmp/runsc/out.log
+ log="/tmp/runsc/out.log"
