--- a/deploy/addons/gvisor/gvisor.yaml
+++ b/deploy/addons/gvisor/gvisor.yaml
@@ -24,7 +24,7 @@ spec:
   hostPID: true
   containers: 
     - name: "gvisor"
-      image: "gcr.io/priya-wadhwa/gvisor:latest"
+      image: "gcr.io/priya-wadhwa/gvisor-addon:latest"
       securityContext:
         privileged: true
       volumeMounts:
@@ -50,34 +50,27 @@ spec:
       lifecycle:
         preStop:
           exec:
-            command: ["/gvisor","-disable"]
+            command: ["/gvisor-addon","-disable"]
   volumes:
   - name: node
     hostPath:
-      # directory location on host
       path: /
   - name: sudo
     hostPath:
-      # directory location on host
       path: /usr/libexec/sudo
   - name: varrun
     hostPath:
-      # directory location on host
       path: /var/run
   - name: usrlib
     hostPath:
-      # directory location on host
       path: /usr/lib
   - name: usrbin
     hostPath:
-      # directory location on host
       path: /usr/bin
   - name: bin
     hostPath:
-      # directory location on host
       path: /bin
   - name: gvisor
     hostPath:
-      # directory location on host
       path: /tmp/gvisor
   restartPolicy: Never
