--- a/deploy/gvisor/Dockerfile
+++ b/deploy/gvisor/Dockerfile
@@ -8,5 +8,5 @@ FROM ubuntu:18.04
 RUN apt-get update && \
     apt-get install -y kmod gcc wget xz-utils libc6-dev bc libelf-dev bison flex openssl libssl-dev libidn2-0 sudo libcap2 && \
     rm -rf /var/lib/apt/lists/*
-COPY out/gvisor /gvisor
-CMD /gvisor
+COPY out/gvisor-addon /gvisor-addon
+CMD /gvisor-addon
